some changes (GitKraken test)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+/*/nb-configuration.xml
+/nbproject/
+/*/nbproject/
+/*/target/
+/*/build/
+
 .gradle
-/build/
-/log/
+LavoramaWeb/log/
+
+.gradle/
+/.nb-gradle-properties
+.nb-gradle/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -10,6 +19,3 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
